# MADS-deployment

./: install_raouls_script.sh  pyproject.toml
1-docker/notebooks/: 1.ingest.ipynb  2.preprocess.ipynb  Dockerfile
3-testing/: pyproject.toml
9-testing/my_application/: my_app.py
9-testing/resources/: __init__.py  test1.py  test2.py
lesson-1/fastapi-minimal/: Dockerfile
lesson-1/fastapi-minimal/src/: main.py
src/mads_deployment/: __init__.py
