[project]
name = "mads-deployment"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "andres", email = "ao.sanchezsaavedra@student.han.nl" }
]
dependencies = [
    "fastapi>=0.115.5",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mads_deployment"]
